<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/baseAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="204dp"
        android:text="@string/base"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tipPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tipPercentage"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/baseAmount"
        app:layout_constraintTop_toBottomOf="@+id/baseAmount" />

    <TextView
        android:id="@+id/tipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/tipLabel"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tipPercentage"
        app:layout_constraintTop_toBottomOf="@+id/tipPercentage" />

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/totalAmount"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tipLabel"
        app:layout_constraintTop_toBottomOf="@+id/tipLabel" />

    <EditText
        android:id="@+id/etBaseAmount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:autofillHints="Enter Amount"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="#000000"

        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/baseAmount"
        app:layout_constraintStart_toEndOf="@+id/baseAmount"
        app:layout_constraintTop_toTopOf="@+id/baseAmount"
        tools:ignore="LabelFor,TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <SeekBar
        android:id="@+id/seekBarTip"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:max="30"
        app:layout_constraintBottom_toBottomOf="@+id/tipPercentage"
        app:layout_constraintStart_toStartOf="@+id/etBaseAmount"
        app:layout_constraintTop_toTopOf="@+id/tipPercentage" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipAmount"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tipLabel"
        app:layout_constraintStart_toStartOf="@+id/seekBarTip"
        app:layout_constraintTop_toTopOf="@+id/tipLabel" />

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTotalAmount"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/totalAmount"
        app:layout_constraintStart_toStartOf="@+id/tvTipAmount"
        app:layout_constraintTop_toTopOf="@+id/totalAmount" />

    <TextView
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/made_with_by_uvesh"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tipDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/seekBarTip"
        app:layout_constraintStart_toStartOf="@+id/seekBarTip"
        app:layout_constraintTop_toBottomOf="@+id/seekBarTip" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/split_bill"
        app:layout_constraintEnd_toEndOf="@+id/etBaseAmount"
        app:layout_constraintStart_toStartOf="@+id/baseAmount"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalAmount" />


</androidx.constraintlayout.widget.ConstraintLayout>