<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplitBill">

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="204dp"
        android:text="@string/total_amount"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotal"
        app:layout_constraintStart_toEndOf="@+id/tvTotal"
        android:autofillHints="@string/total_amount"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/splitBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/split_bill_by"
        android:textSize="18sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/tvTotal"
        app:layout_constraintTop_toBottomOf="@+id/tvTotal" />

    <EditText
        android:id="@+id/etPerson"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="18sp"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/splitBill"
        app:layout_constraintStart_toStartOf="@+id/etAmount"
        android:autofillHints="@string/split_bill_by"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/perPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/pePerson"
        android:textSize="18sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/splitBill"
        app:layout_constraintTop_toBottomOf="@+id/splitBill" />

    <TextView
        android:id="@+id/splitAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00"
        android:textSize="18sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/perPerson"
        app:layout_constraintStart_toStartOf="@+id/etPerson"
        app:layout_constraintTop_toTopOf="@+id/perPerson" />

    <TextView
        android:id="@+id/footer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/made_with_by_uvesh"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>